// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AboutMe /> renders properly 1`] = `
<div>
  <section
    class="jsx-2878702874 container"
    data-testid="aboutMe_section"
  >
    <div
      class="jsx-2878702874 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Sobre
      </h1>
      <div
        class="jsx-2878702874 mainContentContainer"
      >
        <div
          class="jsx-2878702874 imageBlock"
        >
          <img
            alt="a picture of me, Catarina"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="650"
            src="/_next/image?url=%2Fimages%2Fabout-me.jpg&w=1080&q=75"
            srcset="/_next/image?url=%2Fimages%2Fabout-me.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fabout-me.jpg&w=1080&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative;"
            width="530"
          />
        </div>
        <div
          class="jsx-2878702874 textBlock"
        >
          <p
            class="jsx-2878702874 bodyText"
          >
            Olá! O meu nome é Catarina Santiago e sou gestora de redes sociais e fotógrafa baseada em Lisboa.
          </p>
          <p
            class="jsx-2878702874 bodyText"
          >
            Com mais de 4 anos e 18 clientes de experiência, um projeto de freelance transformou-se na Aguarela Digital, uma agência de comunicação com o objetivo de posicionar e fazer brilhar marcas e negócios no digital.
          </p>
          <p
            class="jsx-2878702874 bodyText"
          >
            A estratégia de comunicação em redes sociais é sempre desenvolvida com base nos objetivos do cliente. Embora seja importante ser flexível e compreensiva, o meu papel é pensar fora da caixa, criar conteúdo inovador para redes sociais e otimizar a estratégia com base nos resultados e tendências de mercado. Acredito que uma boa estratégia de comunicação aliada a um planeamento visual de conteúdo é o segredo para o aumento da visibilidade e faturação do negócio.
          </p>
          <div
            class="jsx-477676945 buttonWrapper"
          >
            <div
              class="jsx-477676945 buttonBackground"
            >
              <a
                class="jsx-477676945 buttonComponent fontS"
                href="https://www.instagram.com/catarinasantiago/"
                rel="noreferrer"
                target="_blank"
              >
                Conhece-me melhor
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AboutMe /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-2878702874 container"
    data-testid="aboutMe_section"
  >
    <div
      class="jsx-2878702874 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        About
      </h1>
      <div
        class="jsx-2878702874 mainContentContainer"
      >
        <div
          class="jsx-2878702874 imageBlock"
        >
          <img
            alt="a picture of me, Catarina"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="650"
            src="/_next/image?url=%2Fimages%2Fabout-me.jpg&w=1080&q=75"
            srcset="/_next/image?url=%2Fimages%2Fabout-me.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fabout-me.jpg&w=1080&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative;"
            width="530"
          />
        </div>
        <div
          class="jsx-2878702874 textBlock"
        >
          <p
            class="jsx-2878702874 bodyText"
          >
            Hi! My name is Catarina Santiago and I'm a social media manager and photographer based in Lisbon.
          </p>
          <p
            class="jsx-2878702874 bodyText"
          >
            With more than 4 years of experience and 18 clients, a freelance project became Aguarela Digital, a communication agency with the goal to position and make brands and businesses shine in the digital world.
          </p>
          <p
            class="jsx-2878702874 bodyText"
          >
            The social media strategy is always developed based on the client's goals. While it is important to be flexible, my role is to think outside the box by creating innovative content and optimizing the strategy based on results and market trends. I believe that a good communication strategy combined with a visual planning of the content is the key to increase the visibility and revenue of the business.
          </p>
          <div
            class="jsx-477676945 buttonWrapper"
          >
            <div
              class="jsx-477676945 buttonBackground"
            >
              <a
                class="jsx-477676945 buttonComponent fontS"
                href="https://www.instagram.com/catarinasantiago/"
                rel="noreferrer"
                target="_blank"
              >
                Get to know me better
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AboutMe /> renders properly in mobile 1`] = `
<div>
  <section
    class="jsx-2878702874 container"
    data-testid="aboutMe_section"
  >
    <div
      class="jsx-2878702874 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Sobre
      </h1>
      <div
        class="jsx-2878702874 mainContentContainer"
      >
        <div
          class="jsx-2878702874 imageBlock"
        >
          <img
            alt="a picture of me, Catarina"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="650"
            src="/_next/image?url=%2Fimages%2Fabout-me.jpg&w=1080&q=75"
            srcset="/_next/image?url=%2Fimages%2Fabout-me.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fabout-me.jpg&w=1080&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative;"
            width="530"
          />
        </div>
        <div
          class="jsx-2878702874 textBlock"
        >
          <p
            class="jsx-2878702874 bodyText"
          >
            Olá! O meu nome é Catarina Santiago e sou gestora de redes sociais e fotógrafa baseada em Lisboa.
          </p>
          <p
            class="jsx-2878702874 bodyText"
          >
            Com mais de 4 anos e 18 clientes de experiência, um projeto de freelance transformou-se na Aguarela Digital, uma agência de comunicação com o objetivo de posicionar e fazer brilhar marcas e negócios no digital.
          </p>
          <p
            class="jsx-2878702874 bodyText"
          >
            A estratégia de comunicação em redes sociais é sempre desenvolvida com base nos objetivos do cliente. Embora seja importante ser flexível e compreensiva, o meu papel é pensar fora da caixa, criar conteúdo inovador para redes sociais e otimizar a estratégia com base nos resultados e tendências de mercado. Acredito que uma boa estratégia de comunicação aliada a um planeamento visual de conteúdo é o segredo para o aumento da visibilidade e faturação do negócio.
          </p>
          <div
            class="jsx-477676945 buttonWrapper"
          >
            <div
              class="jsx-477676945 buttonBackground alignCenter"
            >
              <a
                class="jsx-477676945 buttonComponent fontS"
                href="https://www.instagram.com/catarinasantiago/"
                rel="noreferrer"
                target="_blank"
              >
                Conhece-me melhor
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
